# ventilator

./: .gitignore  meson.build
source/: chart.cpp  chart.hpp  lung-widget.cpp  lung-widget.hpp  main-window.cpp  main-window.hpp  main.cpp  parameter.cpp  parameter.hpp  ventilator-configuration.hpp  ventilator.cpp  ventilator.hpp
source/charts/: chart.cpp  chart.hpp  charts-widget.cpp  charts-widget.hpp  charts.hpp
source/lung/: lung-compliance.cpp  lung-compliance.hpp  lung-resistance.cpp  lung-resistance.hpp  lung-widget.cpp  lung-widget.hpp  lung.hpp
source/pcv/: pcv.cpp  pcv.hpp
source/side-bar/: side-bar-widget.cpp  side-bar-widget.hpp  side-bar.hpp
source/sidebar/: sidebar-widget.cpp  sidebar-widget.hpp  sidebar.hpp
source/spinbox/: spinbox-compliance.cpp  spinbox-compliance.hpp  spinbox-frequency.cpp  spinbox-frequency.hpp  spinbox-peep.cpp  spinbox-peep.hpp  spinbox-pressure-peak.cpp  spinbox-pressure-peak.hpp  spinbox-ratio.cpp  spinbox-ratio.hpp  spinbox-resistance.cpp  spinbox-resistance.hpp  spinbox.hpp
source/ventilator/: ventilator-engine.cpp  ventilator-engine.hpp  ventilator-peep.cpp  ventilator-peep.hpp  ventilator-widget.cpp  ventilator-widget.hpp  ventilator.hpp
source/ventilator/ventilator-modes/: ventilator-modes.hpp  ventilator-pcv.cpp  ventilator-pcv.hpp  ventilator-setup.hpp  ventilator-vcv.cpp  ventilator-vcv.hpp
stylesheet/: venezia.qss
subprojects/: ventilation.wrap
